[workspace]
resolver = "2"

members = [
    "./Projects/Rust Programming Language Book/chapter 1 hello_cargo",
    "./Projects/Rust Programming Language Book/chapter 2 guessing_game",
    "./Projects/Rust Programming Language Book/chapter 3 variables",
    "./Projects/Rust Programming Language Book/chapter 3 functions",
    "./Projects/Rust Programming Language Book/chapter 3 control flow",
]
